# MetisCode

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
plans/: README.md  dependency-graph.md  phase1-foundation.md  phase2-core-loop.md  phase3-cli-server.md  phase4-tui.md  phase5-polish.md
src/metiscode/: __init__.py  __main__.py
tests/agent/: test_agent.py
tests/bus/: test_bus.py
tests/cli/: test_cli.py
tests/config/: test_loader.py
tests/integration/: e2e_utils.py  test_e2e.py  test_e2e_cli.py  test_e2e_persistence.py  test_e2e_server.py  test_e2e_tui.py  test_session_lifecycle.py
tests/llm/: test_stream.py
tests/mcp/: test_client.py
tests/permission/: test_permission.py
tests/project/: test_service.py
tests/provider/: __init__.py  test_http_streamers.py  test_provider.py  test_service.py
tests/server/: test_routes.py  test_sse.py
tests/session/: test_compaction.py  test_db.py  test_message.py  test_processor.py  test_prompt.py
tests/skill/: __init__.py  test_loader.py
tests/tool/: test_bash.py  test_edit_blockanchor.py  test_edit_context.py  test_edit_escape.py  test_edit_indent.py  test_edit_linetrimmed.py  test_edit_simple.py  test_edit_trimmedboundary.py  test_edit_whitespace.py  test_glob.py  test_grep.py  test_question.py  test_read.py  test_registry.py  test_skill.py  test_task.py  test_todo.py  test_tool_define.py  test_truncate.py  test_webfetch.py  test_websearch.py  test_write.py
tests/tui/: test_app.py  test_client.py  test_dialogs.py  test_messages.py  test_prompt.py  (+1 more)
(+65 files in other folders)
