[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "metiscode"
version = "0.1.0"
description = "Python port of OpenCode core agent loop"
readme = "PLAN.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  "pydantic>=2.7.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metiscode"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["metiscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
